[gd_scene load_steps=11 format=3 uid="uid://birno5frhhsj6"]

[ext_resource type="FontFile" uid="uid://b6jcjwe8rogn2" path="res://assets/fonts/Cards-LVMG.ttf" id="1"]
[ext_resource type="FontFile" uid="uid://dbmymvpiyrf54" path="res://assets/fonts/WigglyCurvesRegular.ttf" id="2"]
[ext_resource type="Script" uid="uid://bsurqagwqqlnl" path="res://Items/Card.gd" id="3"]
[ext_resource type="FontFile" uid="uid://bd2hc1qap6wmk" path="res://assets/fonts/AcedIt-gD91.ttf" id="4"]

[sub_resource type="StyleBoxFlat" id="4"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("2"), ExtResource("2")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/18/0/ascent = 0.0
cache/0/18/0/descent = 0.0
cache/0/18/0/underline_position = 0.0
cache/0/18/0/underline_thickness = 0.0
cache/0/18/0/scale = 1.0

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("1"), ExtResource("1")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/18/0/ascent = 0.0
cache/0/18/0/descent = 0.0
cache/0/18/0/underline_position = 0.0
cache/0/18/0/underline_thickness = 0.0
cache/0/18/0/scale = 1.0

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("1"), ExtResource("1")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0

[sub_resource type="StyleBoxFlat" id="6"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.784314, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="FontFile" id="5"]
fallbacks = Array[Font]([ExtResource("4"), ExtResource("4")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="Card" type="Node2D"]
script = ExtResource("3")

[node name="BgCard" type="Panel" parent="."]
offset_left = -50.0
offset_top = -75.0
offset_right = 50.0
offset_bottom = 75.0
theme_override_styles/panel = SubResource("4")

[node name="Labels" type="Node2D" parent="."]

[node name="TopCardDigitLabel" type="Label" parent="Labels"]
offset_left = -45.0
offset_top = -70.0
offset_right = -30.0
offset_bottom = -50.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = SubResource("1")
theme_override_font_sizes/font_size = 18
text = "9"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomCardDigitLabel" type="Label" parent="Labels"]
offset_left = 45.0
offset_top = 70.0
offset_right = 60.0
offset_bottom = 90.0
rotation = 3.14159
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = SubResource("1")
theme_override_font_sizes/font_size = 18
text = "9"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TopCardSymLabel" type="Label" parent="Labels"]
offset_left = -45.0
offset_top = -50.0
offset_right = -30.0
offset_bottom = -30.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = SubResource("2")
theme_override_font_sizes/font_size = 18
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomCardSymLabel" type="Label" parent="Labels"]
offset_left = 45.0
offset_top = 50.0
offset_right = 60.0
offset_bottom = 70.0
rotation = 3.14159
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = SubResource("2")
theme_override_font_sizes/font_size = 18
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterCardSymLabel" type="Label" parent="Labels"]
offset_left = -41.0
offset_top = -67.0
offset_right = 43.0
offset_bottom = 65.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_fonts/font = SubResource("3")
theme_override_font_sizes/font_size = 50
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackCard" type="Node2D" parent="."]
position = Vector2(-50, -65)

[node name="BackBgPanel" type="Panel" parent="BackCard"]
offset_left = 5.0
offset_top = -5.0
offset_right = 95.0
offset_bottom = 135.0
theme_override_styles/panel = SubResource("6")

[node name="BackCardLabel" type="Label" parent="BackCard"]
offset_top = 2.0
offset_right = 100.0
offset_bottom = 153.0
theme_override_colors/font_color = Color(0.784314, 0, 0, 1)
theme_override_fonts/font = SubResource("5")
text = "6"
horizontal_alignment = 1
vertical_alignment = 1
